<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".EndActivity">

    <ImageView
        android:id="@+id/end_image"
        android:layout_width="261dp"
        android:layout_height="253dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/end_text_content_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rocket_5666114_960_720" />

    <TextView
        android:id="@+id/end_text_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_text_comment_win"
        android:textColor="?attr/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_image" />

    <TextView
        android:id="@+id/end_text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/end_text_score"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_text_comment" />

    <TextView
        android:id="@+id/end_text_score_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="177dp"
        android:text="@string/end_text_score_comment"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="italic"
        android:theme="@style/Theme.SpaceDIM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_text_score" />

    <Button
        android:id="@+id/end_btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/end_text_btn_retry"
        android:textColor="@color/white"
        app:iconTint="@color/primary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_text_score_comment" />

    <Button
        android:id="@+id/end_btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/end_text_btn_share"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_btn_high_score" />

    <Button
        android:id="@+id/end_btn_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/end_text_btn_high_score"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_btn_retry" />

</androidx.constraintlayout.widget.ConstraintLayout>