<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="fr.test200.spacedim.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment"
        android:background="?attr/colorOnBackground">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rocket_5666114_960_720"
            android:maxHeight="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/space" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="25sp"
            android:text="@string/login_page_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/login_label_pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="92dp"
            android:text="@string/login_label_pseudo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            android:textStyle="italic"
            android:labelFor="@id/login_pseudo"
            />


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_label_pseudo">

            <EditText
                android:id="@+id/login_pseudo"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:text="@={loginViewModel.editTextName.name}"
                android:textColor="?android:attr/colorPrimary"
                android:inputType="text"/>

            <Button
                android:id="@+id/btn_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/btn_lunch"
                android:textColor="@color/white"
                android:onClick="@{() -> loginViewModel.loginUser(loginViewModel.editTextName.name) }"/>

        </LinearLayout>

        <TextView
            android:id="@+id/login_label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/login_label_new_player"
            android:textStyle="italic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_form"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/login_btn_new_player"
            app:layout_constraintRight_toRightOf="parent"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/login_label_register"
            android:onClick="@{() -> loginViewModel.registerUser(loginViewModel.editTextName.name) }"/>

        <TextView
            android:id="@+id/login_info_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_form" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>