<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="WaitingRoomViewModel"
            type="fr.test200.spacedim.waitingRoom.WaitingRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".waitingRoom.WaitingRoomFragment">

        <TextView
            android:id="@+id/enterRoom"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/waitingRoom_start_sentence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgAstronaute"
            android:layout_width="192dp"
            android:layout_height="162dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/systeme_solaire"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterRoom" />


        <TextView
            android:id="@+id/vaisseau_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{WaitingRoomViewModel.spatialshipNameText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSocketActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/waitingRoom_socket_inactive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterRoom" />

        <ImageView
            android:id="@+id/socketActiveColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="200dp"
            android:src="@drawable/ic_socket_inactive"
            app:layout_constraintEnd_toStartOf="@+id/txtSocketActive"
            app:layout_constraintTop_toBottomOf="@+id/enterRoom"/>

        <Button
            android:id="@+id/buttonJoinRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/waitingRoom_btn_join"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSocketActive"
            android:onClick="@{() -> WaitingRoomViewModel.onDisplayPopupRoomName()}"/>

        <Button
            android:id="@+id/buttonReady"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="25dp"
            android:visibility="invisible"
            android:text="@string/waitingWaitForReady"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSocketActive"
            android:onClick="@{() -> WaitingRoomViewModel.sendReady()}"/>

        <LinearLayout
            android:id="@+id/WaitingRoomlinearLayout"
            android:layout_width="0dp"
            android:layout_height="313dp"
            android:layout_marginTop="43dp"
            android:background="@drawable/astronaute_on_moon"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaisseau_name">

            <ScrollView
                android:id="@+id/list_player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/list_player_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>